# MiniECS

./: CMakeLists.txt  README.md
src/: main.cpp
src/interface/: Interface.cpp  Interface.h
src/modules/module_base/: Module.cpp  Module.h
src/modules/renderer/: RendererModule.cpp  RendererModule.h
src/modules/transform/: TransformModule.cpp  TransformModule.h
src/unit/: Unit.cpp  Unit.h
src/world/: World.cpp  World.h
